<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:text="@string/txt_notice_title"
            android:textColor="#333"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:text="@string/txt_notice_desc_1"
            android:textColor="#F00"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:text="@string/txt_notice_desc_2"
            android:textColor="#F00"
            android:textSize="16sp" />

        <include layout="@layout/split_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:text="@string/txt_eg"
            android:textColor="#333"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:text="@string/txt_eg_1"
            android:textColor="#113965"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="@dimen/x50"
            android:layout_height="@dimen/x50"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher" />

        <include layout="@layout/split_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:text="@string/txt_eg_2"
            android:textColor="#113965"
            android:textSize="16sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/y60"
            android:text="@string/app_name" />

        <include layout="@layout/split_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:text="@string/txt_eg_3"
            android:textColor="#113965"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y110"
            android:background="#113965"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2" >

            <TextView
                android:layout_width="0dip"
                android:padding="5dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#80000000"
                android:text="@string/txt_layout_desc"
                android:textColor="#FFF" />
        </LinearLayout>

        <include layout="@layout/split_line" />
    </LinearLayout>

</ScrollView>